--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
@@ -24,5 +24,5 @@ yarn-error.log*
 *.swp
 
 # server
-etc/httpd.conf 
-etc/htpasswd 
+etc/httpd.conf
+etc/htpasswd
