--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm-run-all": "^4.0.1",
     "prop-types": "^15.6.0",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
     "react-helmet": "^5.0.0",
